# meles

./: .gitignore  README.md  pyproject.toml
src/meles/: classifier.py  common.py  dataset.py
src/meles/aggregation/: aggregator.py  clustering.py  pooling.py  quality.py
src/meles/recognizer/: arcface.py  recognizer.py
src/notebooks/: 00_installation_verification.ipynb  01_dataset_exporation.ipynb  02_classification_setup.ipynb  02_ytfaces_dataset.ipynb  03_classification_setup.ipynb  04_aggreagtor_comparison.ipynb
