[project]
name = "meles"
version = "0.1.0"
description = "Reversing video anonymization via aggregation attacks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepface>=0.0.100",
    "matplotlib>=3.11.0",
    "numpy",
    "pandas>=3.0.4",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "tf-keras>=2.21.0",
]

[dependency-groups]
dev = [
    "pytest",
    "jupyterlab",
    "ipykernel",
    "nbstripout",
    "ty>=0.0.53",
    "ruff>=0.15.19",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/meles"]
include = ["src/meles/py.typed"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
